--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
         apt:
           sources:
           - ubuntu-toolchain-r-test
+          packages:
+          - g++-7
       before_install: 
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
