--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ matrix:
       python: 3.7
       before_install:
       - sudo apt-get update
-      - sudo apt-get -y install python3.7 python3.7-dev build-essential mpich libmpich-dev
+      - sudo apt-get -y install python3.7-dev build-essential mpich libmpich-dev
       install: 
       - pip install pybind11 numpy pandas
       script:
@@ -120,7 +120,7 @@ matrix:
       python: 3.8
       before_install:
       - sudo apt-get update
-      - sudo apt-get -y install python3.8 python3.8-dev build-essential mpich libmpich-dev
+      - sudo apt-get -y install python3.8-dev build-essential mpich libmpich-dev
       install: 
       - pip install pybind11 numpy pandas
       script:
@@ -128,9 +128,9 @@ matrix:
       # - python setup.py test
       - make && make test
 
-  allow_failures:
-    - python: 3.7
-    - python: 3.8
+  # allow_failures:
+  #   - python: 3.7
+  #   - python: 3.8
 
 #after_success:
 #  - Rscript -e 'covr::codecov()'
