--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ jobs:
       - make -f MPI.mk && make -f MPI.mk test
 
   allow_failures:
-    - conda_py3
+    - name: conda_py3
 #    - python: 3.8
 
 warnings_are_errors: false
