--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,14 @@ jobs:
         - conda install gxx_linux-64 openssl mpich numpy pandas pybind11
       script:
       - |
-        make PY_CFG=python3-config && make test
-        make PY_CFG=python3-config -f MPI.mk && make -f MPI.mk test
+        make && make test
+        make -f MPI.mk && make -f MPI.mk test
 
     - language: python
-      python: 3.6
+      python: 
+        - "3.6"
+        - "3.7"
+        - "3.8"
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
@@ -51,34 +54,8 @@ jobs:
       script:
       # - python setup.py build
       # - python setup.py test
-      - make && make test
-      - make -f MPI.mk && make -f MPI.mk test
-
-    - language: python
-      python: 3.7
-      before_install:
-      - sudo apt-get update
-      - sudo apt-get -y install python3.7-dev build-essential mpich libmpich-dev
-      install: 
-      - pip install pybind11 numpy pandas
-      script:
-      # - python setup.py build
-      # - python setup.py test
-      - make && make test
-      - make -f MPI.mk && make -f MPI.mk test
-
-    - language: python
-      python: 3.8
-      before_install:
-      - sudo apt-get update
-      - sudo apt-get -y install python3.8-dev build-essential mpich libmpich-dev
-      install: 
-      - pip install pybind11 numpy pandas
-      script:
-      # - python setup.py build
-      # - python setup.py test
-      - make && make test
-      - make -f MPI.mk && make -f MPI.mk test
+      - make PY_CFG=python-config PY_CFG_EXTRA_ARG= && make test
+      - make PY_CFG=python-config PY_CFG_EXTRA_ARG= -f MPI.mk && make -f MPI.mk test
 
   allow_failures:
     - name: conda_py3
