--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,8 @@ jobs:
       script:
       # - python setup.py build
       # - python setup.py test
-      - make PY_CFG=python-config && make test
-      - make PY_CFG=python-config -f MPI.mk && make -f MPI.mk test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
   allow_failures:
     - name: conda_py3
