--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,32 @@ jobs:
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
+    - language: python
+      python: 3.7
+      before_install:
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential mpich libmpich-dev
+      install: 
+      - pip install pybind11 numpy pandas
+      script:
+      # - python setup.py build
+      # - python setup.py test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
+
+    - language: python
+      python: 3.8
+      before_install:
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential mpich libmpich-dev
+      install: 
+      - pip install pybind11 numpy pandas
+      script:
+      # - python setup.py build
+      # - python setup.py test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
+
   allow_failures:
     - name: conda_py3
 #    - python: 3.8
