--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,10 @@ jobs:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
       install: 
-      - pip install pybind11 numpy pandas
+      - pip install pybind11 numpy pandas mpi4py
       script:
-      # - python setup.py build
-      # - python setup.py test
+      - python setup.py build
+      - python setup.py test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
@@ -60,10 +60,10 @@ jobs:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.7-dev 
       install: 
-      - pip install pybind11 numpy pandas
+      - pip install pybind11 numpy pandas mpi4py
       script:
-      # - python setup.py build
-      # - python setup.py test
+      - python setup.py build
+      - python setup.py test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
@@ -78,12 +78,27 @@ jobs:
       script:
       - python setup.py build
       - python setup.py test
-      #- make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
-      #- make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
+      - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
-#  allow_failures:
-#    - name: conda_py3
-#    - python: 3.8
+    - os: osx
+      osx_image: xcode11.2
+      language: shell
+      #before_install:
+      # - brew update
+      # - brew unlink python@2
+      # - brew upgrade python
+      #- brew install python3
+      #  - python3 -m pip install numpy distutils pytest
+      install: pip3 install --upgrade pip
+      script:
+        - python3 setup.py install
+        - python3 tests/test_all.py
+
+ allow_failures:
+   - os: osx
+  #  - name: conda_py3
+  #  - python: 3.8
 
 warnings_are_errors: false
 
