--- a/.travis.yml
+++ b/.travis.yml
@@ -71,13 +71,13 @@ jobs:
       python: 3.8
       before_install:
       - sudo apt-get update
-      #- sudo apt-get -y install build-essential mpich libmpich-dev python3.8-dev 
       - sudo apt-get -y install build-essential mpich libmpich-dev python3.8-dev 
       install: 
       - pip install pybind11 numpy pandas mpi4py
       script:
       - python setup.py install
       - python setup.py test
+      - mpiexec -n 2 pytest
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
@@ -95,10 +95,10 @@ jobs:
         - python3 setup.py install
         - python3 tests/test_all.py
 
-allow_failures:
-  - os: osx
-  # - name: conda_py3
-  # - python: 3.8
+  allow_failures:
+    - os: osx
+    # - name: conda_py3
+    # - python: 3.8
 
 warnings_are_errors: false
 
