--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 # Build environments
 
+# TODO this script needs tidying
+
 image:
   - Visual Studio 2019
 
@@ -37,26 +39,8 @@ install:
       if ($env:TEST_LANGUAGE -eq "Python") {
         $python = $env:PYTHON + "\python.exe"
         & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
-        & $python -m pip install numpy --no-warn-script-location
+        & $python -m pip install numpy pandas mpi4py --no-warn-script-location
       }
-  # try to fix cython install, see:
-  # * https://matthew-brett.github.io/pydagogue/python_msvc.html
-  # * https://blog.ionelmc.ro/2014/12/21/compiling-python-extensions-on-windows/
-  #- echo "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 > "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\bin\amd64/vcvars64.bat"
-
-  # could try settings from https://www.appveyor.com/docs/lang/cpp/
-  # - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
-  # - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
-
-  # note: VS 2010 has stdint.h bundled so simply copy it. Cython should not
-  #       depend on it for py27 (works fine when compiling using C code)
-  #       but this works differently for C++ (maybe there is some other issue
-  #       with environment setup).
-  # try to do a dirty workaround for Cython with C++ for py27
-  #- cp "c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\include\stdint.h" "C:\Users\appveyor\AppData\Local\Programs\Common\Microsoft\Visual C++ for Python\9.0\VC\include\stdint.h"
-  # get latest version of all submodules
-  #  - "git submodule update --init --recursive"
-  #  - "%PYTHON%\\python.exe -m pip install -r doc/requirements-test.txt"
 
 cache:
   - C:\RLibrary
