--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,6 @@ cache: packages
 jobs:
   include:
 
-    # - name: venv_py3
-    #   addons:
-    #     apt:
-    #       sources:
-    #       - ubuntu-toolchain-r-test
-    #       packages:
-    #       - g++-7
-    #   before_install: 
-    #   - sudo apt-get update
-    #   - sudo apt-get -y install build-essential mpich libmpich-dev
-    #   script:
-    #   - virtualenv -p python3 .venv
-    #   - source .venv/bin/activate
-    #   - pip install -U numpy pandas pybind11
-    #   - make && make test
-    #   - make -f MPI.mk && make -f MPI.mk test
-
     - name: conda_py3
       before_install: 
       - | 
@@ -40,7 +23,7 @@ jobs:
       - |
         python setup.py install
         pytest -v
-        mpiexec -n 2 pytest -v
+        mpiexec -n 2 $(which pytest) -v
       #  make && make test
       #  make -f MPI.mk && make -f MPI.mk test
 
