--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ jobs:
       language: shell
       before_install:
         - brew update
-        - brew install mpich
+        - brew install open-mpi
       # - brew unlink python@2
       # - brew upgrade python
       #- brew install python3
