--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
-      - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
+      #- make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
       - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
     - os: osx
