--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,20 +27,21 @@ init:
       $python = $env:PYTHON + "\python.exe"
       & $python --version
 
-install:
+install: 
   - ps: |
+      curl -L -o msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
+      msmpisetup.exe -unattend 
       $python = $env:PYTHON + "\python.exe"
       & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
       & $python -m pip install numpy pandas mpi4py --no-warn-script-location
 
-
 build_script:
   - cmd: '%PYTHON%\python.exe setup.py install'
 
-# TODO run in MPI mode also 
 test_script:
-  - cmd: '%PYTHON%\\python.exe setup.py test'
-
+  - cmd: |
+      '%PYTHON%\\python.exe setup.py test'
+      'mpiexec -n 2 %PYTHON%\\python.exe setup.py test'
 
 notifications:
   - provider: Email
