--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ init:
 
 install: 
   - ps: |
-      curl -L -o msmpisetup.exe https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe
+      Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
       msmpisetup.exe -unattend 
       $python = $env:PYTHON + "\python.exe"
       & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
