--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ init:
 install: 
   - ps: |
       Start-FileDownload 'https://github.com/microsoft/Microsoft-MPI/releases/download/v10.1.1/msmpisetup.exe'
-      msmpisetup.exe -unattend 
+      .\msmpisetup.exe -unattend 
       $python = $env:PYTHON + "\python.exe"
       & $python -m pip install --upgrade pip wheel setuptools --no-warn-script-location
       & $python -m pip install numpy pandas mpi4py --no-warn-script-location
