--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,6 @@ jobs:
         python setup.py install
         pytest -sv
         mpiexec -n 2 $(which pytest) -sv
-      #  make && make test
-      #  make -f MPI.mk && make -f MPI.mk test
 
     - language: python
       python: 3.6
@@ -38,8 +36,6 @@ jobs:
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
-      # - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
-      # - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
     - language: python
       python: 3.7
@@ -52,8 +48,6 @@ jobs:
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
-      # - make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
-      # - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
     - language: python
       python: 3.8
@@ -66,8 +60,6 @@ jobs:
       - python setup.py install
       - python setup.py test
       - mpiexec -n 2 pytest -sv
-      #- make PY_CFG=python-config PY_CFG_LINK_ARG="" && make test
-      - make PY_CFG=python-config PY_CFG_LINK_ARG="" -f MPI.mk && make -f MPI.mk test
 
     - os: osx
       osx_image: xcode11.2
@@ -75,10 +67,6 @@ jobs:
       before_install:
         - brew update
         - brew install open-mpi
-      # - brew unlink python@2
-      # - brew upgrade python
-      #- brew install python3
-      #  - python3 -m pip install numpy distutils pytest
       install: 
         - pip3 install --upgrade pip
         - pip3 install pandas mpi4py
@@ -87,8 +75,8 @@ jobs:
         - python3 setup.py test
         - mpiexec -n 2 python3 setup.py test
 
-  allow_failures:
-    - os: osx
+  #allow_failures:
+    # - os: osx
     # - name: conda_py3
     # - python: 3.8
 
