--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,11 @@
-site_name: neworder Documentation
+site_name: neworder
+
+nav:
+  - 'description.md'
+  - 'installation.md'
+  - 'api.md'
+  - 'examples.md'
+  - 'developer.md'
+  - 'references.md'
+  
+
