--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,13 @@ markdown_extensions:
       permalink: "¶"  
   - admonition      
   - codehilite
-
+  - pymdownx.arithmatex:
+      generic: true
+extra_javascript:
+  - js/config.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+      
 plugins:
   - search
 #  - mkpdfs
