--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ plugins:
 #  - mkdocstrings
 
 nav:
+  - Home: index.md
   - Description: description.md
   - Examples:
     - Hello World: examples/hello_world.md
@@ -43,12 +44,12 @@ nav:
     - Markov Chain: examples/markov_chain.md
     - Chapter 1: examples/chapter1.md
     - Mortality: examples/mortality.md
-    - Option: examples/option.md
     - Competing: examples/competing.md
-    - Disease: examples/disease.md
-    - People: ./examples/people.md
-    #- People (parallel): ./examples/people_multi.md
     - RiskPaths: examples/riskpaths.md
+    #- Disease: examples/disease.md
+    - People: ./examples/people.md
+    - Option: examples/option.md
+    #- People (parallel): ./examples/people_multi.md
     - Schelling: examples/schelling.md
   - API:
     - API Reference: api_auto.md
